# QuaTorch

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  artifact.tar  pyproject.toml
.github/workflows/: docs.yml  lint.yaml  publish.yml  pytest.yml  python-app.yml
dev/bench/: data.js
docs/source/: api.md  benchmark.md  conf.py  examples.ipynb  index.md  index.rst
source/: index.rst
src/quatorch/: CHANGELOG.md  __init__.py  quaternion.py
test/: smoke_test.py
test/benchmark/: test_performance.py
test/unit_tests/: test_quaternion.py
